--- a/404.html
+++ b/404.html
@@ -116,7 +116,7 @@
                 
                 <!-- QR Code -->
                 <div class="mb-4">
-                    <img src="../../upi.jpg" alt="Payment QR" class="img-fluid rounded shadow" style="max-width: 250px;">
+                    <img src="img/upi.jpg" alt="Payment QR" class="img-fluid rounded shadow" style="max-width: 250px;">
                 </div>
 
                 <!-- Payment Details -->
@@ -214,5 +214,6 @@
     <!-- Template Javascript -->
     <script src="./js/main.js"></script>
 </body>
+
 
 </html>
