--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
                     <p class="mb-4" style="font-size:20px"><i class="fa fa-phone-alt me-3"></i>+91 9578 786 111</p>
                     
                     <h4 class="text-white" style="text-shadow: 1px 1px 2px black;">Email Us</h4>
-                    <p class="mb-4" style="font-size:20px"><i class="fa fa-envelope me-3"></i>bismifoodproducts@gmail.com</p>
+                    <p class="mb-4" style="font-size:20px"><i class="fa fa-envelope me-3"></i>bismibiriyanimasala@gmail.com</p>
                     
                     <h4 class="text-white"style="text-shadow: 1px 1px 2px black;">Office Address</h4>
                     <p class="mb-0" style="font-size:20px"><i class="fa fa-map-marker-alt me-3"></i>123 Pulipandian Street, Jaihindpuram</p>
@@ -226,5 +226,6 @@
     <!-- Template Javascript -->
     <script src="./js/main.js"></script>
 </body>
+
 
 </html>
