--- a/index.html
+++ b/index.html
@@ -361,6 +361,48 @@
 
     <!-- Template Javascript -->
     <script src="./js/main.js"></script>
+          <!-- 🎆 Diwali Offer Popup Banner -->
+<div id="offerPopup" style="
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+">
+  <div style="position: relative; text-align: center;">
+    <img src="img/new.jpg" 
+         alt="Diwali Offer - Hurry Up!" 
+         style="max-width: 90%; height: auto; border-radius: 15px; box-shadow: 0 0 20px #ff9900;">
+    <button onclick="closeOfferPopup()" style="
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #ff6600;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 35px;
+      height: 35px;
+      font-size: 18px;
+      cursor: pointer;
+    ">✖</button>
+  </div>
+</div>
+
+<script>
+  function closeOfferPopup() {
+    document.getElementById('offerPopup').style.display = 'none';
+  }
+</script>
+
+
+
 </body>
+
 
 </html>
