--- a/index.html
+++ b/index.html
@@ -361,21 +361,22 @@
 
     <!-- Template Javascript -->
     <script src="./js/main.js"></script>
-          <!-- 🎆 Diwali Offer Popup Banner -->
+         <!-- 🎆 தீபாவளி சலுகை Popup Banner -->
 <div id="offerPopup" style="
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.85);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
+  flex-direction: column;
 ">
   <div style="position: relative; text-align: center;">
-    <img src="img/new.jpg" 
+    <img src="img/diwali-offer.jpg" 
          alt="Diwali Offer - Hurry Up!" 
          style="max-width: 90%; height: auto; border-radius: 15px; box-shadow: 0 0 20px #ff9900;">
     <button onclick="closeOfferPopup()" style="
@@ -392,7 +393,35 @@
       cursor: pointer;
     ">✖</button>
   </div>
+
+  <!-- 🎉 Tamil Message with Glow & Animation -->
+  <p style="
+    color: #fff;
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
+    padding: 0 10px;
+    animation: glowPulse 1.5s infinite alternate, bounceText 2s infinite;
+  ">
+    🎉 வாடிக்கையாளர் கோரிக்கைக்கு இணங்க, தீபாவளி சலுகை <strong>அக்டோபர் 15</strong> வரை நீட்டிக்கப்பட்டுள்ளது! 🛍️
+  </p>
 </div>
+
+<style>
+  /* Glow Animation */
+  @keyframes glowPulse {
+    0% { text-shadow: 0 0 5px #ffcc00, 0 0 10px #ffcc00, 0 0 20px #ff6600, 0 0 30px #ff6600; }
+    50% { text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ff6600, 0 0 40px #ff6600; }
+    100% { text-shadow: 0 0 5px #ffcc00, 0 0 10px #ffcc00, 0 0 20px #ff6600, 0 0 30px #ff6600; }
+  }
+
+  /* Bounce Animation */
+  @keyframes bounceText {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-10px); }
+  }
+</style>
 
 <script>
   function closeOfferPopup() {
@@ -400,9 +429,8 @@
   }
 </script>
 
-
-
 </body>
 
 
 </html>
+
