--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   flex-direction: column;
 ">
   <div style="position: relative; text-align: center;">
-    <img src="img/diwali-offer.jpg" 
+    <img src="img/new.jpg" 
          alt="Diwali Offer - Hurry Up!" 
          style="max-width: 90%; height: auto; border-radius: 15px; box-shadow: 0 0 20px #ff9900;">
     <button onclick="closeOfferPopup()" style="
@@ -433,4 +433,5 @@
 
 
 </html>
+
 
