--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
     <!-- Template Javascript -->
     <script src="./js/main.js"></script>
-         <!-- 🎆 தீபாவளி சலுகை Popup Banner -->
+    <!-- 🎆 தீபாவளி சலுகை Popup Banner -->
 <div id="offerPopup" style="
   position: fixed;
   top: 0;
@@ -374,11 +374,16 @@
   align-items: center;
   z-index: 9999;
   flex-direction: column;
+  padding: 10px;
+  box-sizing: border-box;
 ">
-  <div style="position: relative; text-align: center;">
+  <div style="position: relative; text-align: center; width: 100%; max-width: 800px;">
+    <!-- Banner Image -->
     <img src="img/new.jpg" 
          alt="Diwali Offer - Hurry Up!" 
-         style="max-width: 90%; height: auto; border-radius: 15px; box-shadow: 0 0 20px #ff9900;">
+         style="width: 100%; height: auto; border-radius: 15px; box-shadow: 0 0 20px #ff9900;">
+
+    <!-- Close Button -->
     <button onclick="closeOfferPopup()" style="
       position: absolute;
       top: 10px;
@@ -387,27 +392,35 @@
       color: white;
       border: none;
       border-radius: 50%;
-      width: 35px;
-      height: 35px;
-      font-size: 18px;
+      width: 40px;
+      height: 40px;
+      font-size: 20px;
       cursor: pointer;
+      z-index: 20;
+      box-shadow: 0 0 10px #ff6600;
     ">✖</button>
   </div>
 
-  <!-- 🎉 Tamil Message with Glow & Animation -->
+  <!-- 🎉 Tamil Message with Glow & Bounce -->
   <p style="
-    color: #fff;
-    font-size: 22px;
     font-weight: bold;
     margin-top: 20px;
     text-align: center;
     padding: 0 10px;
+    font-size: 22px;
+    color: #fff; /* fallback */
+    background: linear-gradient(90deg, #ffcc00, #ff6600);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     animation: glowPulse 1.5s infinite alternate, bounceText 2s infinite;
+    z-index: 10;
+    position: relative;
   ">
     🎉 வாடிக்கையாளர் கோரிக்கைக்கு இணங்க, தீபாவளி சலுகை <strong>அக்டோபர் 15</strong> வரை நீட்டிக்கப்பட்டுள்ளது! 🛍️
   </p>
 </div>
 
+<!-- Styles -->
 <style>
   /* Glow Animation */
   @keyframes glowPulse {
@@ -421,6 +434,19 @@
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(-10px); }
   }
+
+  /* Responsive Adjustments */
+  @media (min-width: 768px) {
+    #offerPopup img { max-width: 70%; }
+    #offerPopup p { font-size: 28px; }
+    #offerPopup button { width: 45px; height: 45px; font-size: 22px; }
+  }
+
+  @media (max-width: 767px) {
+    #offerPopup img { max-width: 90%; }
+    #offerPopup p { font-size: 22px; }
+    #offerPopup button { width: 35px; height: 35px; font-size: 18px; }
+  }
 </style>
 
 <script>
@@ -429,9 +455,11 @@
   }
 </script>
 
+
 </body>
 
 
 </html>
+
 
 
