--- a/product.html
+++ b/product.html
@@ -117,7 +117,17 @@
                 <div class="tab-content">
     <div id="tab-1" class="tab-pane fade show p-0 active">
         <div class="row g-4">
-
+            
+<!-- Product 1 -->
+            <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="product-item text-center p-4">
+                    <img class="img-fluid mb-3" src="img/new.jpg" alt="" style="height: 400px; width: 100%; object-fit: contain;">
+                    <a class="d-block h5 mb-2">Bismi Diwali Combo Pack</a>
+                    <span class="text-primary me-1">Rs.200.00</span>
+                    <input type="number" min="1" value="1" class="quantity-input" style="width:60px; margin:5px 0;">
+                    <button class="add-to-order" data-name="Bismi Diwali Combo Pack" data-price="200">Add to Order</button>
+                </div>
+            </div>
             <!-- Product 1 -->
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="product-item text-center p-4">
@@ -352,4 +362,5 @@ document.getElementById("placeOrder").addEventListener("click", function() {
 
 </body>
 </html>
+
 
