--- a/product.html
+++ b/product.html
@@ -122,6 +122,7 @@
             <div class="col-xl-4 col-lg-4 col-md-6">
                 <div class="product-item text-center p-4">
                     <img class="img-fluid mb-3" src="img/new.jpg" alt="" style="height: 400px; width: 100%; object-fit: contain;">
+                    <div class="tag">Limited Stock - Order Now</div>
                     <a class="d-block h5 mb-2">Bismi Diwali Combo Pack</a>
                     <span class="text-primary me-1">Rs.200.00</span>
                     <input type="number" min="1" value="1" class="quantity-input" style="width:60px; margin:5px 0;">
@@ -362,5 +363,6 @@ document.getElementById("placeOrder").addEventListener("click", function() {
 
 </body>
 </html>
+
 
 
