--- a/index.html
+++ b/index.html
@@ -145,7 +145,19 @@
     <!-- Product Start -->
     <!-- Product Start --> <div class="container-xxl py-5"> <div class="container"> <div class="row g-0 gx-5 align-items-end"> <div class="col-lg-6"> <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;"> <h1 class="display-5 mb-3">Our Products</h1> <p>Bringing the Taste of Tradition to Your Kitchen</p> <h3>HOT SELLERS</h3> </div> </div>
    <div class="row g-4 justify-content-center">
-  
+
+         
+  <div class="col-md-4">
+    <div class="product-item bg-white shadow-sm text-center p-4">
+      <img class="img-fluid w-100 mb-3" src="img/new.jpg" alt="">
+      <h5>Bismi Diwali Combo Pack</h5>
+      <p class="text-success fw-bold">Rs.200.00</p>
+      <a class="text-body" href="product.html">
+        <i class="fa fa-eye text-success me-2"></i> View detail
+      </a>
+    </div>
+  </div>
+
   <div class="col-md-4">
     <div class="product-item bg-white shadow-sm text-center p-4">
       <img class="img-fluid w-100 mb-3" src="img/product-1.jpg" alt="">
@@ -460,6 +472,7 @@
 
 
 </html>
+
 
 
 
