--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
 
  
-           <!-- Google Reviews Start -->
+        <!-- Google Reviews Start -->
 <div class="container-fluid bg-light bg-icon py-6 mb-5">
     <div class="container">
         <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -267,14 +267,15 @@
             <p>See what our happy customers are saying about Bismi Food Products.</p>
         </div>
 
-        <!-- Elfsight Google Reviews Widget -->
+        <!-- Trustindex Google Reviews Widget -->
         <div class="wow fadeInUp text-center" data-wow-delay="0.2s">
-            <script src="https://static.elfsight.com/platform/platform.js" async></script>
-            <div class="elfsight-app-637e0012-562c-44dd-84c0-1611137e3772" data-elfsight-app-lazy></div>
+            <div class="trustindex-widget" data-widget-id="eb76aa0559179324b2566a95014"></div>
         </div>
     </div>
 </div>
 <!-- Google Reviews End -->
+
+
 
     
 
@@ -496,11 +497,14 @@
   }
 </script>
 
+<!-- Trustindex Script -->
+<script defer async src="https://cdn.trustindex.io/loader.js?eb76aa0559179324b2566a95014"></script>
 
 </body>
 
 
 </html>
+
 
 
 
