--- a/index.html
+++ b/index.html
@@ -257,23 +257,21 @@
     </div>
     <!-- Firm Visit End -->
 
-
- <!-- Google Reviews Start -->
+<!-- Google Reviews Start -->
 <div class="container-fluid bg-light bg-icon py-6 mb-5">
-    <div class="container">
-        <div class="section-header text-center mx-auto mb-5" style="max-width: 500px;">
-            <h1 class="display-5 mb-3">Customer Reviews</h1>
-            <p>See what our happy customers are saying about Bismi Food Products.</p>
-        </div>
-
-        <!-- Trustindex Google Reviews Widget -->
-        <div class="text-center" data-wow-delay="0.2s">
-            <div class="trustindex-widget" data-widget-id="eb76aa0559179324b2566a95014"></div>
-        </div>
+  <div class="container">
+    <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+      <h1 class="display-5 mb-3">Customer Reviews</h1>
+      <p>See what our happy customers are saying about Bismi Food Products.</p>
     </div>
+
+    <!-- Trustindex Google Reviews Widget -->
+    <div class="wow fadeInUp text-center" data-wow-delay="0.2s">
+      <div class="trustindex-widget" data-widget-id="eb76aa0559179324b2566a95014"></div>
+    </div>
+  </div>
 </div>
 <!-- Google Reviews End -->
-
 
 
 
@@ -504,6 +502,7 @@
 
 
 </html>
+
 
 
 
