--- a/index.html
+++ b/index.html
@@ -257,23 +257,7 @@
     </div>
     <!-- Firm Visit End -->
 
-<!-- Google Reviews Start -->
-<div class="container-fluid bg-light bg-icon py-6 mb-5">
-  <div class="container">
-    <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-      <h1 class="display-5 mb-3">Customer Reviews</h1>
-      <p>See what our happy customers are saying about Bismi Food Products.</p>
-    </div>
-
-    <!-- Trustindex Google Reviews Widget -->
-    <div class="wow fadeInUp text-center" data-wow-delay="0.2s">
-      <div class="trustindex-widget" data-widget-id="eb76aa0559179324b2566a95014"></div>
-    </div>
-  </div>
-</div>
-<!-- Google Reviews End -->
-
-
+<!-- Google Reviews Start --> <div class="container-fluid bg-light bg-icon py-6 mb-5"> <div class="container"> <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;"> <h1 class="display-5 mb-3">Customer Reviews</h1> <p>See what our happy customers are saying about Bismi Food Products.</p> </div> <!-- Elfsight Google Reviews Widget --> <div class="wow fadeInUp text-center" data-wow-delay="0.2s"> <script src="https://static.elfsight.com/platform/platform.js" async></script> <div class="elfsight-app-637e0012-562c-44dd-84c0-1611137e3772" data-elfsight-app-lazy></div> </div> </div> </div> <!-- Google Reviews End -->
 
     
 
@@ -502,6 +486,7 @@
 
 
 </html>
+
 
 
 
